--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://tezzytezzy.github.io/folder/main.html" />
+<meta http-equiv="refresh" content="0; url=https://tezzytezzy.github.io/folder/index.html" />
