Added Statcounter code

--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
 <meta http-equiv="refresh" content="0; url=https://tezzytezzy.github.io/dist/main.html" />
+<body>
+<!-- Default Statcounter code for asx https://tezzytezzy.github.io/index.html
+-->
+<script type="text/javascript">
+var sc_project=12787337; 
+var sc_invisible=1; 
+var sc_security="b000caf8"; 
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js" async></script>
+<noscript><div class="statcounter"><a title="Web Analytics"
+href="https://statcounter.com/" target="_blank"><img class="statcounter"
+src="https://c.statcounter.com/12787337/0/b000caf8/1/" alt="Web Analytics"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+<!-- End of Statcounter Code -->
+</body>
