Shortened href URL

--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
+<!-- github Actions requires index.html to be placed at the root level
+BUT, all of my source files are in ./src directory
+To counter that, this index.html redirects itself to ./dist/main.html -->
 <meta http-equiv="refresh" content="0; url=https://tezzytezzy.github.io/dist/main.html" />
