Added 1) workflow_dispatch in the yml, 2)  setLastUpdate(),  and 3) target="_blank" in the hrefs

--- a/src/main.html
+++ b/src/main.html
@@ -77,137 +77,137 @@
         <tbody>
           <tr class="table-success">
             <th scope="row">ALL INDUSTRIES</th>
-            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-comp-all-data.json" download>ALL DATA</a>
+            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-comp-all-data.json" target="_blank" download>ALL DATA</a>
           </tr>
           <tr>
             <th scope="row">Energy</th>
-            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-energy.json" download>Energy</a>
+            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-energy.json" target="_blank" download>Energy</a>
           </tr>
           <tr>
             <th scope="row">Materials</th>
-            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-materials.json" download>Materials</a>
+            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-materials.json" target="_blank" download>Materials</a>
           </tr>
           <tr>
             <th rowspan="3">Industrials</th>
-            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-capital-goods.json" download>Capital Goods</a>
+            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-capital-goods.json" target="_blank" download>Capital Goods</a>
             </td>
           </tr><!-- this tag is inserted AFTER the first spanned element, not BEFORE -->
           <tr>
-            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-commercial-&-professional-services.json" download>Commercial &
+            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-commercial-&-professional-services.json" target="_blank" download>Commercial &
                 Professional Services</a>
             </td>
           </tr>
           <tr>
-            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-transportation.json" download>Transportation</a>
+            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-transportation.json" target="_blank" download>Transportation</a>
             </td>
           </tr>
           </tr>
           <tr>
             <th rowspan="4">Consumer Discretionary (Consumer Cyclical)</th>
-            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-automobiles-&-components.json" download>Automobiles &
+            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-automobiles-&-components.json" target="_blank" download>Automobiles &
                 Components</a>
             </td>
           </tr>
           <tr>
-            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-consumer-durables-&-apparel.json" download>Consumer Durables &
+            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-consumer-durables-&-apparel.json" target="_blank" download>Consumer Durables &
                 Apparel</a>
             </td>
           </tr>
           <tr>
-            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-consumer-services.json" download>Consumer Services</a>
+            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-consumer-services.json" target="_blank" download>Consumer Services</a>
             </td>
           </tr>
           <tr>
-            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-retailing.json" download>Retailing</a>
+            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-retailing.json" target="_blank" download>Retailing</a>
             </td>
           </tr>
           </tr>
           <tr>
             <th rowspan="3">Consumer Staples (Consumer Defensive)</th>
-            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-food-&-staples-retailing.json" download>Food & Staples
+            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-food-&-staples-retailing.json" target="_blank" download>Food & Staples
                 Retailing</a>
             </td>
           </tr>
           <tr>
-            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-food,-beverage-&-tobacco.json" download>Food, Beverage &
+            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-food,-beverage-&-tobacco.json" target="_blank" download>Food, Beverage &
                 Tobacco</a>
             </td>
           </tr>
           <tr>
-            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-household-&-personal-products.json" download>Household &
+            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-household-&-personal-products.json" target="_blank" download>Household &
                 Personal Products</a>
             </td>
           </tr>
           </tr>
           <tr>
             <th rowspan="2">Health Care</th>
-            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-health-care-equipment-&-services.json" download>Health Care
+            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-health-care-equipment-&-services.json" target="_blank" download>Health Care
                 Equipment & Services</a>
             </td>
           </tr>
           <tr>
-            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-pharmaceuticals,-biotechnology-&-life-sciences.json" download>Pharmaceuticals, Biotechnology & Life
+            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-pharmaceuticals,-biotechnology-&-life-sciences.json" target="_blank" download>Pharmaceuticals, Biotechnology & Life
                 Sciences</a>
             </td>
           </tr>
           </tr>
           <tr>
             <th rowspan="3">Financials</th>
-            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-banks.json" download>Banks</a>
+            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-banks.json" target="_blank" download>Banks</a>
             </td>
           </tr>
           <tr>
-            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-diversified-financials.json" download>Diversified
+            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-diversified-financials.json" target="_blank" download>Diversified
                 Financials</a>
             </td>
           </tr>
           <tr>
-            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-insurance.json" download>Insurance</a>
+            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-insurance.json" target="_blank" download>Insurance</a>
             </td>
           </tr>
           </tr>
           <tr>
             <th rowspan="3">Information Technology</th>
-            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-software-&-services.json" download>Software & Services</a>
+            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-software-&-services.json" target="_blank" download>Software & Services</a>
             </td>
           </tr>
           <tr>
-            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-technology-hardware-&-equipment.json" download>Technology
+            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-technology-hardware-&-equipment.json" target="_blank" download>Technology
                 Hardware & Equipment</a>
             </td>
           </tr>
           <tr>
-            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-semiconductors-&-semiconductor-equipment.json" download>Semiconductors & Semiconductor Equipment</a>
+            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-semiconductors-&-semiconductor-equipment.json" target="_blank" download>Semiconductors & Semiconductor Equipment</a>
             </td>
           </tr>
           </tr>
           <tr>
             <th rowspan="2">Communication Services</th>
-            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-telecommunication-services.json" download>Telecommunication
+            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-telecommunication-services.json" target="_blank" download>Telecommunication
                 Services</a>
             </td>
           </tr>
           <tr>
-            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-media-&-entertainment.json" download>Media & Entertainment</a>
+            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-media-&-entertainment.json" target="_blank" download>Media & Entertainment</a>
             </td>
           </tr>
           </tr>
           <tr>
             <th scope="row">Utilities</th>
-            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-utilities.json" download>Utilities</a>
+            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-utilities.json" target="_blank" download>Utilities</a>
             </td>
           </tr>
           <tr>
             <th scope="row">Real Estate</th>
-            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-real-estate.json" download>Real Estate</a>
+            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-real-estate.json" target="_blank" download>Real Estate</a>
             </td>
           </tr>
           <tr class="table-warning">
             <th scope="row" rowspan="2">MISCELLANEOUS</th>
-            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-class-pend.json" download>Classification Pending</a>
+            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-class-pend.json" target="_blank" download>Classification Pending</a>
           </tr>
           <tr class="table-warning">
-            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-not-applic.json" download>Not Applicable</a>
+            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-not-applic.json" target="_blank" download>Not Applicable</a>
           </tr>
           </tr>
         </tbody>
@@ -266,7 +266,7 @@
   <div class="copyright py-4 text-center text-white">
     <div class="container">
       <small>
-        <p id="last-updated"><i>Last updated</i></p>
+        <p id="last-updated"><i></i></p>
         Copyright &copy; ASX Data Bank 2022
       </small>
     </div>
