Added getIndustryFileName() in asx.ts and "Not Classified" entry in main.html

--- a/src/main.html
+++ b/src/main.html
@@ -209,6 +209,9 @@
           <tr class="table-warning">
             <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-not-applic.json" target="_blank" download>Not Applicable</a>
           </tr>
+          <tr class="table-warning">
+            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-not-classified.json" target="_blank" download>Not Classified</a>
+          </tr>          
           </tr>
         </tbody>
         </tbody>
