Fixed some typos and errors

--- a/src/main.html
+++ b/src/main.html
@@ -78,13 +78,14 @@
           <tr class="table-success">
             <th scope="row" rowspan="2">ALL INDUSTRIES</th>
             <td><a
-                href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-comp-basic-data.json">BASIC
-                DATA</a>
-          </tr>
+                href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-comp-basic-data.json"
+                target="_blank" download>BASIC DATA</a>
+            </td>
+          </tr><!-- this tag is inserted AFTER the first spanned element, not BEFORE -->
           <tr class="table-success">
-            <td><a
-                href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-comp-full-data.json">FULL
-                DATA</a>
+            <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-comp-full-data.json"
+                target="_blank" download>FULL DATA</a>
+            </td>
           </tr>
           </tr>
           <tr>
@@ -102,12 +103,11 @@
             <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-capital-goods.json"
                 target="_blank" download>Capital Goods</a>
             </td>
-          </tr><!-- this tag is inserted AFTER the first spanned element, not BEFORE -->
+          </tr>
           <tr>
             <td><a
                 href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-commercial-&-professional-services.json"
-                target="_blank" download>Commercial &
-                Professional Services</a>
+                target="_blank" download>Commercial & Professional Services</a>
             </td>
           </tr>
           <tr>
@@ -120,15 +120,13 @@
             <th rowspan="4">Consumer Discretionary (Consumer Cyclical)</th>
             <td><a
                 href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-automobiles-&-components.json"
-                target="_blank" download>Automobiles &
-                Components</a>
+                target="_blank" download>Automobiles & Components</a>
             </td>
           </tr>
           <tr>
             <td><a
                 href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-consumer-durables-&-apparel.json"
-                target="_blank" download>Consumer Durables &
-                Apparel</a>
+                target="_blank" download>Consumer Durables & Apparel</a>
             </td>
           </tr>
           <tr>
@@ -147,22 +145,19 @@
             <th rowspan="3">Consumer Staples (Consumer Defensive)</th>
             <td><a
                 href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-food-&-staples-retailing.json"
-                target="_blank" download>Food & Staples
-                Retailing</a>
+                target="_blank" download>Food & Staples Retailing</a>
             </td>
           </tr>
           <tr>
             <td><a
                 href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-food,-beverage-&-tobacco.json"
-                target="_blank" download>Food, Beverage &
-                Tobacco</a>
+                target="_blank" download>Food, Beverage & Tobacco</a>
             </td>
           </tr>
           <tr>
             <td><a
                 href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-household-&-personal-products.json"
-                target="_blank" download>Household &
-                Personal Products</a>
+                target="_blank" download>Household & Personal Products</a>
             </td>
           </tr>
           </tr>
@@ -170,15 +165,13 @@
             <th rowspan="2">Health Care</th>
             <td><a
                 href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-health-care-equipment-&-services.json"
-                target="_blank" download>Health Care
-                Equipment & Services</a>
+                target="_blank" download>Health Care Equipment & Services</a>
             </td>
           </tr>
           <tr>
             <td><a
                 href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-pharmaceuticals,-biotechnology-&-life-sciences.json"
-                target="_blank" download>Pharmaceuticals, Biotechnology & Life
-                Sciences</a>
+                target="_blank" download>Pharmaceuticals, Biotechnology & Life Sciences</a>
             </td>
           </tr>
           </tr>
@@ -211,8 +204,7 @@
           <tr>
             <td><a
                 href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-technology-hardware-&-equipment.json"
-                target="_blank" download>Technology
-                Hardware & Equipment</a>
+                target="_blank" download>Technology Hardware & Equipment</a>
             </td>
           </tr>
           <tr>
@@ -226,8 +218,7 @@
             <th rowspan="2">Communication Services</th>
             <td><a
                 href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-telecommunication-services.json"
-                target="_blank" download>Telecommunication
-                Services</a>
+                target="_blank" download>Telecommunication Services</a>
             </td>
           </tr>
           <tr>
@@ -250,17 +241,20 @@
             </td>
           </tr>
           <tr class="table-warning">
-            <th scope="row" rowspan="2">MISCELLANEOUS</th>
+            <th scope="row" rowspan="3">MISCELLANEOUS</th>
             <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-class-pend.json"
                 target="_blank" download>Classification Pending</a>
+            </td>
           </tr>
           <tr class="table-warning">
             <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-not-applic.json"
                 target="_blank" download>Not Applicable</a>
+            </td>
           </tr>
           <tr class="table-warning">
             <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-not-classified.json"
                 target="_blank" download>Not Classified</a>
+            </td>
           </tr>
           </tr>
         </tbody>
