Tidied up codes with validator.w3.org

--- a/src/main.html
+++ b/src/main.html
@@ -87,7 +87,6 @@
                 target="_blank" download>FULL DATA</a>
             </td>
           </tr>
-          </tr>
           <tr>
             <th scope="row">Energy</th>
             <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-energy.json"
@@ -115,7 +114,6 @@
                 target="_blank" download>Transportation</a>
             </td>
           </tr>
-          </tr>
           <tr>
             <th rowspan="4">Consumer Discretionary (Consumer Cyclical)</th>
             <td><a
@@ -140,7 +138,6 @@
                 target="_blank" download>Retailing</a>
             </td>
           </tr>
-          </tr>
           <tr>
             <th rowspan="3">Consumer Staples (Consumer Defensive)</th>
             <td><a
@@ -160,7 +157,6 @@
                 target="_blank" download>Household & Personal Products</a>
             </td>
           </tr>
-          </tr>
           <tr>
             <th rowspan="2">Health Care</th>
             <td><a
@@ -173,7 +169,6 @@
                 href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-pharmaceuticals,-biotechnology-&-life-sciences.json"
                 target="_blank" download>Pharmaceuticals, Biotechnology & Life Sciences</a>
             </td>
-          </tr>
           </tr>
           <tr>
             <th rowspan="3">Financials</th>
@@ -192,7 +187,6 @@
             <td><a href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-insurance.json"
                 target="_blank" download>Insurance</a>
             </td>
-          </tr>
           </tr>
           <tr>
             <th rowspan="3">Information Technology</th>
@@ -213,7 +207,6 @@
                 target="_blank" download>Semiconductors & Semiconductor Equipment</a>
             </td>
           </tr>
-          </tr>
           <tr>
             <th rowspan="2">Communication Services</th>
             <td><a
@@ -226,7 +219,6 @@
                 href="https://github.com/tezzytezzy/tezzytezzy.github.io/blob/main/dist/data/asx-media-&-entertainment.json"
                 target="_blank" download>Media & Entertainment</a>
             </td>
-          </tr>
           </tr>
           <tr>
             <th scope="row">Utilities</th>
@@ -256,8 +248,6 @@
                 target="_blank" download>Not Classified</a>
             </td>
           </tr>
-          </tr>
-        </tbody>
         </tbody>
       </table>
 
@@ -295,14 +285,12 @@
             <div class="form-group">
               <!-- This label tag needs to be there for submit-form.com to work-->
               <label for="email"></label>
-              <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp"
-                placeholder="Email address" required>
+              <input type="email" class="form-control" id="email" name="email" placeholder="Email address" required>
             </div>
             <div class="form-group">
               <!-- This label tag needs to be there for submit-form.com to work-->
               <label for="message"></label>
-              <textarea class="form-control" id="message" name="message" rows="3" placeholder="Message"
-                required></textarea>
+              <textarea class="form-control" id="message" name="message" rows="3" placeholder="Message" required></textarea>
             </div>
             <button id="button-id" type="submit" class="btn btn-primary">Submit</button>
           </form>
@@ -313,12 +301,9 @@
   <!-- Copyright Section-->
   <div class="copyright py-4 text-center text-white">
     <div class="container">
-      <small>
         <p id="last-updated"><i></i></p>
         Copyright &copy; ASX Data Bank 2022
-      </small>
     </div>
-  </div>
   </div>
   <!-- <script>
     const td = document.querySelectorAll('.td-link');
