Added Statcounter code in index and main htmls. Changed favicon.png

--- a/index.html
+++ b/index.html
@@ -3,20 +3,17 @@ BUT, all of my source files are in ./src directory
 To counter that, this index.html redirects itself to ./dist/main.html -->
 <meta http-equiv="refresh" content="0; url=https://tezzytezzy.github.io/dist/main.html" />
 
-<!-- Start of StatCounter Code for Default Guide -->
+<!-- Default Statcounter code for asx
+https://tezzytezzy.github.io/index.html -->
 <script type="text/javascript">
     var sc_project = 12787337;
-    var sc_invisible = 0;
-    var sc_security = "b000caf8";
-    var scJsHost = (("https:" == document.location.protocol) ?
-        "https://secure." : "http://www.");
-    document.write("<sc" + "ript type='text/javascript' src='" +
-        scJsHost +
-        "statcounter.com/counter/counter.js'></" + "script>");
+    var sc_invisible = 1;
+    var sc_security = "b000caf8"; 
 </script>
+<script type="text/javascript" src="https://www.statcounter.com/counter/counter.js" async></script>
 <noscript>
-    <div class="statcounter"><a title="Web Analytics" href="http://statcounter.com/" target="_blank"><img
-                class="statcounter" src="//c.statcounter.com/12787337/0/b000caf8/0" alt="Web
-    Analytics"></a></div>
+    <div class="statcounter"><a title="Web Analytics" href="https://statcounter.com/" target="_blank"><img
+                class="statcounter" src="https://c.statcounter.com/12787337/0/b000caf8/1/" alt="Web Analytics"
+                referrerPolicy="no-referrer-when-downgrade"></a></div>
 </noscript>
-<!-- End of StatCounter Code for Default Guide -->
+<!-- End of Statcounter Code -->
