--- a/src/main.html
+++ b/src/main.html
@@ -289,7 +289,7 @@
   <div class="copyright py-4 text-center text-white">
     <div class="container">
       <p id="lastupdate"><i></i></p>
-      Copyright &copy; 2022 East Oaret 3621 Inc. &VerticalLine All Rights Reserved
+      Copyright &copy; 2022 East Oaret 3621 Inc. | All Rights Reserved
     </div>
   </div>
 
